--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
     "@react-native-community/datetimepicker": "3.5.2",
     "expo": "~43.0.0",
     "expo-constants": "~12.1.3",
@@ -16,6 +17,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-ico-shopping": "^3.3.1",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
